--- a/workflows/cloudscale/image-steps.yml
+++ b/workflows/cloudscale/image-steps.yml
@@ -1,44 +1,4 @@
 steps:
-- match: Then I download the OpenShift image for version "(?P<image_name>[^"]+)"
-  description: |-
-    This step downloads the OpenShift image for the version specified by in the step.
-
-    If the image already exists locally, it skips the download.
-  outputs:
-  - name: image_path
-  - name: image_major
-  - name: image_minor
-  - name: image_patch
-  run: |
-    set -euo pipefail
-
-    . ./workflows/cloudscale/scripts/semver.sh
-
-    MAJOR=0
-    MINOR=0
-    PATCH=0
-    SPECIAL=""
-    semverParseInto "$MATCH_image_name" MAJOR MINOR PATCH SPECIAL
-
-    image_path="rhcos-$MAJOR.$MINOR.qcow2"
-
-    env -i "image_major=$MAJOR" >> "$OUTPUT"
-    env -i "image_minor=$MINOR" >> "$OUTPUT"
-    env -i "image_patch=$PATCH" >> "$OUTPUT"
-
-    echo "Image is $image_path"
-
-    if [ -f "$image_path" ]; then
-      echo "Image $image_path already exists, skipping download."
-      env -i "image_path=$image_path" >> "$OUTPUT"
-      exit 0
-    fi
-
-    echo Downloading OpenShift image "$MATCH_image_name" to "$image_path"
-
-    curl -L "https://mirror.openshift.com/pub/openshift-v4/dependencies/rhcos/${MAJOR}.${MINOR}/${MATCH_image_name}/rhcos-${MATCH_image_name}-x86_64-openstack.x86_64.qcow2.gz" | gzip -d > "$image_path"
-    env -i "image_path=$image_path" >> "$OUTPUT"
-
 - match: And I set up required S3 buckets
   description: |-
     This step sets up the required S3 buckets for the OpenShift cluster installation.
@@ -47,7 +7,7 @@ steps:
   inputs:
   - name: cloudscale_token
   - name: commodore_cluster_id
-  - name: cloudscale_region
+  - name: csp_region
   outputs:
   - name: bucket_user
   run: |
@@ -68,7 +28,7 @@ steps:
 
     echo -n "Waiting for S3 credentials to become available ..."
     until mc alias set \
-      "${INPUT_commodore_cluster_id}" "https://objects.${INPUT_cloudscale_region}.cloudscale.ch" \
+      "${INPUT_commodore_cluster_id}" "https://objects.${INPUT_csp_region}.cloudscale.ch" \
       "$(echo "$response" | jq -r '.keys[0].access_key')" \
       "$(echo "$response" | jq -r '.keys[0].secret_key')"
     do
@@ -91,11 +51,11 @@ steps:
 
     echo "Configuring S3 bucket policies..."
     aws s3api put-public-access-block \
-      --endpoint-url "https://objects.${INPUT_cloudscale_region}.cloudscale.ch" \
+      --endpoint-url "https://objects.${INPUT_csp_region}.cloudscale.ch" \
       --bucket "${INPUT_commodore_cluster_id}-image-registry" \
       --public-access-block-configuration BlockPublicAcls=false
     aws s3api put-bucket-lifecycle-configuration \
-      --endpoint-url "https://objects.${INPUT_cloudscale_region}.cloudscale.ch" \
+      --endpoint-url "https://objects.${INPUT_csp_region}.cloudscale.ch" \
       --bucket "${INPUT_commodore_cluster_id}-image-registry" \
       --lifecycle-configuration '{
         "Rules": [
@@ -123,7 +83,7 @@ steps:
   inputs:
   - name: image_path
   - name: commodore_cluster_id
-  - name: cloudscale_region
+  - name: csp_region
   - name: bucket_user
   - name: image_major
   - name: image_minor
@@ -141,7 +101,7 @@ steps:
     fi
 
     mc alias set \
-      "${INPUT_commodore_cluster_id}" "https://objects.${INPUT_cloudscale_region}.cloudscale.ch" \
+      "${INPUT_commodore_cluster_id}" "https://objects.${INPUT_csp_region}.cloudscale.ch" \
       "$(echo "$INPUT_bucket_user" | jq -r '.keys[0].access_key')" \
       "$(echo "$INPUT_bucket_user" | jq -r '.keys[0].secret_key')"
 
@@ -156,7 +116,7 @@ steps:
     curl -i -H "$auth_header" \
       -F url="$(mc share download --json "${INPUT_commodore_cluster_id}/${INPUT_commodore_cluster_id}-bootstrap-ignition/rhcos-${INPUT_image_major}.${INPUT_image_minor}.qcow2" | jq -r .url)" \
       -F name="RHCOS ${INPUT_image_major}.${INPUT_image_minor}" \
-      -F zones="${INPUT_cloudscale_region}1" \
+      -F zones="${INPUT_csp_region}1" \
       -F slug="rhcos-${INPUT_image_major}.${INPUT_image_minor}" \
       -F source_format=qcow2 \
       -F user_data_handling=pass-through \
