--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 .idea/
 .vscode/
 
+# Release action
+.github/release-notes.md
 
 # Commodore
 catalog/
@@ -36,3 +38,4 @@ ui-log.txt
 openshift4-clusters/
 em-*
 backup-dump*
+openshift-install*
