--- a/workflows/shared/installer-steps.yml
+++ b/workflows/shared/installer-steps.yml
@@ -13,7 +13,7 @@ steps:
     then
       alias openshift-install='./openshift-install'
       echo "Found existing openshift-install binary, checking version ..."
-      INSTALLED_VERSION=$(openshift-install version | grep 'openshift-install' | awk '{print $2}' | sed 's/^v//' | sed -E 's/\.[0-9]{1,2}$//')
+      INSTALLED_VERSION=$(openshift-install version | sed -E -n '/openshift-install/s/^[^ ]+ v?//;s/\.[0-9]{1,2}$//p')
       if [ "$INSTALLED_VERSION" = "$MATCH_ocp_version" ]; then
         echo "✅ openshift-install version ${MATCH_ocp_version}.XX is present."
         env -i "openshift_install_bin=$( pwd )/openshift-install" >> "$OUTPUT"
